# cpp-rng-simulator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main  main.cpp
.github/workflows/: ci.yml
app/: main.cpp
include/: rng.hpp
src/: rng.cpp
tests/: rng_tests.cpp
